--- a/css/index.css
+++ b/css/index.css
@@ -101,6 +101,23 @@ header{
 	}
 }
 /*======================================================================================================*/
+h1.menuTag{
+	text-align: center;
+	margin-top: -80px;
+}
+#underline1{
+	display: block;
+	margin: 10px auto 0px;
+}
+@media screen and (max-width: 380px){
+	h1.menuTag{
+		font-size: 20px;
+	}
+	#underline1{
+		margin-top: 15px;
+		margin-bottom: 10px;
+	}
+}
 .menu{
 	position: relative;
 	min-height: 70vh;
@@ -108,7 +125,7 @@ header{
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	margin-top: -80px;
+	margin-top: 0px;
 }
 .menu .container{
 	position: relative;
@@ -117,6 +134,7 @@ header{
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
+	flex-wrap: wrap;
 }
 .menu .container .img{
 	position: relative;
@@ -126,10 +144,11 @@ header{
 	cursor: pointer;
 	border-top-right-radius: 25px;
 	border-bottom-left-radius: 25px;
+	margin: 20px 0;
 }
 .menu .container .img img{
 	position: relative;
-	width: 100%;
+	width:100%;
 	height: 100%;
 }
 .menu .container .img span{
@@ -176,6 +195,17 @@ header{
 }
 #underline{
 	margin-top: 10px;
+}
+
+
+@media screen and (max-width: 400px){
+	#main > div.menu > div{
+		width: 100%;
+	}
+	.menu .container .img{
+		width: 260px;
+		height: 360px;
+	}
 }
 /*================================================================================================*/
 .review{
