--- a/css/index.css
+++ b/css/index.css
@@ -161,6 +161,8 @@ h1.menuTag{
 	position: relative;
 	width:100%;
 	height: 100%;
+	border-top-right-radius: 25px !important;
+	border-bottom-left-radius: 25px !important;
 }
 .menu .container .img span{
 	position: absolute;
